# sd2snes-lttp-rando-tracker

./: .appveyor.yml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  bors.toml  build.rs  deny.toml  example-data.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: automerge.yml  build.yml  continuous-integration.yml  release.yml
logic/: dungeon_locations.yaml  poi_locations.yaml
scripts/: before-cache.sh  before-deploy-linux.sh  before-deploy-windows.sh  before-deploy.sh  before-install-macos.sh  before-install-windows.sh  before-install.sh  build-linux.sh  build-macos.sh  build-windows.sh  build.sh
src/: http.rs  io.rs  lttp.rs  main.rs
src/http/: api.rs
src/http/api/: websocket.rs
src/io/: file_state.rs  logic_files.rs  snes_state.rs
src/lttp/: app_config.rs  app_state.rs  item.rs  logic.rs  mod.rs  server_config.rs
src/lttp/item/: mod.rs
src/lttp/logic/: availability.rs  dungeon_availability.rs  location_availability.rs  rule.rs
ui/: .eslintrc.js  .prettierrc  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vuex.d.ts
ui/config/: dev.env.js
ui/public/: index.html
ui/src/: App.vue  actions.js  bossLocations.js  chestLogic.js  dungeonLocations.js  getters.js  index.css  main.js  main.ts  mutations.js  poiLocations.js  router.ts  store.ts
ui/src/components/: Dashboard.vue  ItemTracker.vue  MapTracker.vue  SettingsModal.vue
ui/src/components/items/: Armor.vue  Blank.vue  Bombos.vue  Book.vue  Boots.vue  Bottle.vue  Bow.vue  Cape.vue  Dungeon.vue  DungeonItemView.vue  Ether.vue  FireRod.vue  Flippers.vue  Flute.vue  Glove.vue  Hammer.vue  HookShot.vue  IceRod.vue  Lantern.vue  Mirror.vue  MoonPearl.vue  Mushroom.vue  Powder.vue  Quake.vue  Shield.vue  Shovel.vue  SilverArrows.vue  Somaria.vue  Sword.vue
ui/src/components/map/: Dungeon.vue  DungeonMapView.vue  Location.vue  LocationMapView.vue
ui/src/router/: index.js
ui/src/server_types/: Armor.ts  Availability.ts  BigKey.ts  Boomerang.ts  Bottle.ts  Bow.ts  Crystal.ts  DataSource.ts  DataSourceType.ts  Dungeon.ts  DungeonAvailability.ts  DungeonBoss.ts  DungeonReward.ts  DungeonState.ts  DungeonUpdate.ts  GameState.ts  Gloves.ts  LocalFileConfig.ts  Location.ts  LocationAvailability.ts  LocationCoordinates.ts  LocationPosition.ts  LocationState.ts  LocationUpdate.ts  Magic.ts  Medallion.ts  Pendant.ts  Qusb2snesConfig.ts  RandoLogic.ts  ServerConfig.ts  ServerConfigUpdate.ts  Shield.ts  Sword.ts
ui/src/styles/: _item-states.scss  _variables.scss  app.scss
ui/test/unit/: jest.conf.js
ui/test/unit/specs/: Dashboard.spec.js
