[package]
name = "sd2snes-lttp-rando-tracker"
description = "Automatically track progress in a Link to the Past randomizer run using a USB2SNES modified SD2SNES."
version = "2.0.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
build = "build.rs"
include = ["ui/dist"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.5.6", features = ["ws"] }
axum-debug = "0.3.3"
clap = { version = "3.1.18", features = ["cargo"] }
console-subscriber = "0.1.6"
hyper = "0.14.16"
iftree = "1.0.2"
mime = "0.3.16"
mime_guess = "2.0.4"
once_cell = "1.12.0"
qusb2snes-client = "0.3.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.8.23"
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["cors", "set-header", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
ts-rs = "6.1.2"

[build-dependencies]
anyhow = "1.0.57"
vergen = { version = "7.1.0", default-features = false, features = ["build", "git", "rustc"] }
