[package]
name = "sd2snes-lttp-rando-tracker"
description = "Automatically track progress in a Link to the Past randomizer run using a USB2SNES modified SD2SNES."
version = "2.0.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
build = "build.rs"
include = ["ui/dist"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = ["ws"] }
axum-debug = "0.3.3"
clap = { version = "4.0.26", features = ["cargo", "deprecated"] }
console-subscriber = "0.1.7"
hyper = "0.14.16"
iftree = "1.0.2"
mime = "0.3.16"
mime_guess = "2.0.4"
once_cell = "1.16.0"
qusb2snes-client = "0.3.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.8.26"
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors", "set-header", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ts-rs = "6.2.0"

[build-dependencies]
anyhow = "1.0.66"
vergen = { version = "7.4.2", default-features = false, features = ["build", "git", "rustc"] }
