[package]
name = "sd2snes-lttp-rando-tracker"
description = "Automatically track progress in a Link to the Past randomizer run using a USB2SNES modified SD2SNES."
version = "2.0.1"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
build = "build.rs"
include = ["ui/dist"]
edition = "2021"

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.6.20", features = ["ws"] }
axum-debug = "0.3.3"
clap = { version = "4.4.11", features = ["cargo", "deprecated"] }
console-subscriber = "0.2.0"
hyper = "0.14.16"
iftree = "1.0.2"
mime = "0.3.16"
mime_guess = "2.0.4"
once_cell = "1.19.0"
qusb2snes-client = "0.3.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.9.34"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "set-header", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ts-rs = "7.0.0"

[build-dependencies]
anyhow = "1.0.76"
vergen = { version = "8.2.6", features = [
  "build",
  "cargo",
  "git",
  "git2",
  "rustc",
] }
